--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,6 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=TOA Dropped Item Indicator
+author=CoCo-Gaming
+support=https://github.com/ElectricCy/TOA-dropped-items-indicator.git
+description=This plugin is designed to stop players from leaving an area before picking up any dropped items.
+tags=TOA Dropped Item Indicator
+plugins=org.CoCo-Gaming.ExamplePlugin
