Added sound, improved functionality

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -3,4 +3,4 @@ author=CoCo-Gaming
 support=https://github.com/ElectricCy/TOA-dropped-items-indicator.git
 description=This plugin is designed to stop players from leaving an area before picking up any dropped items.
 tags=TOA Dropped Item Indicator
-plugins=org.CoCo-Gaming.ExamplePlugin
+plugins=com.CoCoGaming.ExamplePlugin
